Played around with some HTML and CSS and updated a few classes, ids, content, and styles.

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -18,7 +18,7 @@
 			</nav>
 
 			<h1 id="slogan">Here to build <span style="color: #DCAA86"> cool shit.</span></h1>
-			<h2>Developer by day. Builder at <span style="color: #DCAA86">my core.</span></h2>
+			<h2>Developer by trade. Builder at <span style="color: #DCAA86">my core.</span></h2>
 
 			<br>
 
@@ -27,22 +27,29 @@
 
 			<h3>Skills</h3>
 				<p><strong>STRONG</strong><span style="color: #4d5465"> <br>TypeScript / React / Mobx / JavaScript / Node.js / Express / SASS <br> AWS / DynamoDB / SQL / Git / Gulp / Sketch / Eletron</span><br><br><strong>EXPERIENCED</strong><span style="color: #4d5465"> <br>RethinkDB / MongoDB / UI/UX / Swift / Xcode / D3.js / Ruby on Rails</span></p>
-			<div class="current-projects-list">
-				<h3>Current Projects</h3>
-					<ul>
-						<li><strong>Maven</strong></li>
-						<li><strong>Spot</strong></li>
-						<li><strong>CalcHub</strong></li>
+			<h3>Current Projects</h3>
+						<div class="current-projects-list">
+							<p><strong>Maven</strong><br><span style="color: #4d5465"> Think your bank's website for a business' credit card transactions.</span></p>
+							<p><strong>Spot</strong><br><span style="color: #4d5465"> Think something for something here.</span></p>
+							<div id="calchub-padding"><p><strong>CalcHub</strong><br><span style="color: #4d5465"> Think GitHub for math.</span></p></div>
+						</div>
 					</ul>
-			</div>
+			
 			<h3>Likes</h3>
-			<p></p>
+				<ul>
+					<li><a href="#">Riddles</a></li>
+					<li>Puzzles</li>
+					<li>Skiing/Snowboarding</li>
+					<li>Kite Surfing</li>
+					<li>Climbing</li>
+					<li>Memes</li>
+				</ul>
 
 			<h3>Connect</h3>
 				<div class="contact">
 					<p><a href="mailto: trevorhanus@gmail.com"><strong>Email</strong></a></p>
 					<p><a href="https://www.linkedin.com/in/trevorhanus"><strong>LinkedIn</strong></a></p>
-					<div id="github-padding"><p><a href="https://github.com/trevorhanus"><strong>GitHub</strong></a></p></div>
+					<p><a href="https://github.com/trevorhanus"><strong>GitHub</strong></a></p>
 				</div>
 		</div>
 	</main>
