Closed span tags in h1, h2 in HTML

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -15,8 +15,8 @@
 				<a class="hire-me" href="#">Hire Me</a>
 			</nav>
 
-			<h1 id="slogan">Here to build <span class="end-header-words"> cool shit.</h1>
-			<h2>Developer by trade. Builder at <span class="end-header-words">my core.</h2>
+			<h1 id="slogan">Here to build <span class="end-header-words"> cool shit.</h1></span>
+			<h2>Developer by trade. Builder at <span class="end-header-words">my core.</h2></span>
 
 			<h3>Name</h3>
 			<p class="title">Trevor Hanus</p>
