--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -31,8 +31,8 @@
 
 			<h3>Current Projects</h3>
 				<div class="current-projects-list">
-					<p class="title"><strong>Maven</strong></p><span class="descriptor"> Think your bank's website for a business' credit card transactions.</span></p>
-					<p class="title"><strong>Spot</strong></p><span class="descriptor"> Think a rescue dog for the 21st century.</span></p>
+					<p class="title"><strong>Maven</strong></p><span class="descriptor"> Think your bank's website for a business' credit card transactions.</span>
+					<p class="title"><strong>Spot</strong></p><span class="descriptor"> Think a rescue dog for the 21st century.</span>
 					<p class="title"><strong>CalcHub</strong></p><span class="descriptor"> Think GitHub for math.</span>
 				</div>
 			
