Updates to HTML and CSS for Unit 6. Also added an about page.

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -15,41 +15,34 @@
 		</nav>
 
 		<header>
-			<h1 id="slogan">Here to build <span class="end-header-words">cool shit.</h1></span>
-			<h2>Developer by trade. Builder at <span class="end-header-words">my core.</h2></span>
+			<h1 id="slogan">Here to build <span id="cool-shit" class="end-header-words">cool shit.</span></h1>
+			<h2>Developer by trade. Builder at <span class="end-header-words">my core.</span></h2>
 		</header>
 
 		<section>
 			<h3>Name</h3>
-
 			<h4>Trevor Hanus</h4>
 		</section>
 
 		<section>
 			<h3>Skills</h3>
-				<h4><strong>Strong</strong></h4>
-
-					<p class="descriptor"> TypeScript / React / Mobx / JavaScript / Node.js / Express / SASS</p> 
-
-					<p class="descriptor"> AWS / DynamoDB / SQL / Git / Gulp / Sketch / Eletron</p>
-
-				<h4 id="experienced-spacing"><strong>Experienced</strong></h4>
-
-					<p class="descriptor">RethinkDB / MongoDB / UI/UX / Swift / Xcode / D3.js / Ruby on Rails</p>
+			<h4><strong>Strong</strong></h4>
+				<p class="descriptor"> TypeScript / React / Mobx / JavaScript / Node.js / Express / SASS</p> 
+				<p class="descriptor"> AWS / DynamoDB / SQL / Git / Gulp / Sketch / Eletron</p>
+			<h4 id="experienced-spacing"><strong>Experienced</strong></h4>
+				<p class="descriptor">RethinkDB / MongoDB / UI/UX / Swift / Xcode / D3.js / Ruby on Rails</p>
 		</section>
 
 		<section>
 			<h3>Current Projects</h3>
-					<h4><strong>Maven</strong></h4><span class="descriptor"> Think your bank's website for a business' credit card transactions.</span>
-
-					<h4><strong>Spot</strong></h4><span class="descriptor"> Think a rescue dog for the 21st century.</span>
-
-					<h4><strong>CalcHub</strong></h4><span class="descriptor"> Think GitHub for math.</span>
-			</section>
+			<h4><strong>Maven</strong></h4>
+				<p class="descriptor"> Think your bank's website for a business' credit card transactions.</p>
+			<h4><strong>Spot</strong></h4><p class="descriptor"> Think a rescue dog for the 21st century.</p>
+			<h4><strong>CalcHub</strong></h4><p class="descriptor"> Think GitHub for math.</p>
+		</section>
 
 		<section id="likes">
 			<h3>Likes</h3>
-
 				<ul>
 					<li><a href="#">Riddles</a></li>
 					<li>Puzzles</li>
@@ -63,11 +56,9 @@
 		<section>
 			<h3>Connect</h3>
 				<div class="contact">
-					<p><a href="mailto: trevorhanus@gmail.com"><strong>Email</strong></a></p>
-
-					<p><a href="https://www.linkedin.com/in/trevorhanus"><strong>LinkedIn</strong></a></p>
-
-					<p><a href="https://github.com/trevorhanus"><strong>GitHub</strong></a></p>
+					<a href="mailto: trevorhanus@gmail.com"><strong>Email</strong></a>
+					<a href="https://www.linkedin.com/in/trevorhanus"><strong>LinkedIn</strong></a>
+					<a href="https://github.com/trevorhanus"><strong>GitHub</strong></a>
 				</div>
 		</section>
 
