--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -8,7 +8,7 @@
 <body>
 		<nav>
 			<a href ="#">Home</a>
-			<a href="#">About Me</a>
+			<a href="https://hayleyvogt.github.io/unit_6/about.html">About Me</a>
 			<a href="#">Cool Shit</a>
 			<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
 		</nav>
