--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Trevor Hanus' Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 		<nav>
 			<a href ="#">Home</a>
-			<a href="#">About Me</a>
+			<a href="https://hayleyvogt.github.io/unit_6/about.html">About Me</a>
 			<a href="#">Cool Shit</a>
 			<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
 		</nav>
