Updates to responsive and mobile design

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -22,13 +22,13 @@
 				<h2>Developer by trade. Builder at <span class="end-header-words">my core.</span></h2>
 			</header>
 
-			<section>
+			<section class="name">
 				<h3>Name</h3>
 				<h4>Trevor Hanus</h4>
 			</section>
 
 			<section>
-				<h3>Current Projects</h3>
+				<h3 id="projects-mobile-header">Current Projects</h3>
 				<h4><a class="current-projects-list" href="#">Maven</a></h4>
 					<p>Think your bank's website for a business' credit card transactions.</p>
 				<h4><a class="current-projects-list" href="#">Spot</a></h4>
@@ -37,7 +37,7 @@
 					<p>Think GitHub for math.</p>
 			</section>
 
-			<section>
+			<section class="skills">
 				<h3>Skills</h3>
 				<h4>Strong</h4>
 					<p>TypeScript / React / Mobx / JavaScript / Node.js / Express / SASS</p> 
@@ -53,6 +53,7 @@
 					<a href="https://www.linkedin.com/in/trevorhanus" target="_blank">LinkedIn</a>
 					<a href="https://github.com/trevorhanus" target="_blank">GitHub</a>
 					<a href="https://www.riddles.com/riddle-of-the-day" target="_blank">Riddle Me!</a>
+					<a id ="mobile-contact" href="mailto:trevorhanus@gmail.com" target="_blank">Hire Me</a>
 				</div>
 			</section>
 		</div>
