Added projects page

--- a/unit_9/about.html
+++ b/unit_9/about.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<nav>
-		<a href ="https://hayleyvogt.github.io/unit_8/index.html">Home</a>
-		<a href="https://hayleyvogt.github.io/unit_8/about.html">About Me</a>
-		<a href="#">Cool Shit</a>
+		<a href ="https://hayleyvogt.github.io/unit_9/index.html">Home</a>
+		<a href="https://hayleyvogt.github.io/unit_9/about.html">About Me</a>
+		<a href="https://hayleyvogt.github.io/unit_9/projects.html">Cool Shit</a>
 		<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
 	</nav>
 
