--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -9,9 +9,9 @@
 <body>
 		<nav>
 			<a href="#" id="mobile">&#9776;</a>
-			<a href ="https://hayleyvogt.github.io/unit_8/index.html">Home</a>
-			<a href="https://hayleyvogt.github.io/unit_8/about.html">About Me</a>
-			<a href="#">Cool Shit</a>
+			<a href ="https://hayleyvogt.github.io/unit_9/index.html">Home</a>
+			<a href="https://hayleyvogt.github.io/unit_9/about.html">About Me</a>
+			<a href="https://hayleyvogt.github.io/unit_9/projects.html">Cool Shit</a>
 			<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
 		</nav>
 
