Updated website with style changes and started building out more pages. About and Projects isn't completed or responsive just yet.

--- a/unit_9/projects.html
+++ b/unit_9/projects.html
@@ -6,6 +6,68 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+		<nav>
+			<a href="#" id="mobile">&#9776;</a>
+			<a href ="https://hayleyvogt.github.io/unit_9/index.html">Home</a>
+			<a href="https://hayleyvogt.github.io/unit_9/about.html">About Me</a>
+			<a href="https://hayleyvogt.github.io/unit_9/projects.html">Cool Shit</a>
+			<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
+		</nav>
+
+		<div id="container">
+
+			<header>
+				<h1 id="projects-header">Here's some <span class="end-header-words">cool shit.</span></h1>
+			</header>
+
+		<div id="current-projects-list" class="clearfix">
+			<section>
+				<h3><a href="#">CalcHub</a></h3>
+				<img href="#" src="https://placeholder.baker.com/300x200">
+				<h4 class="job-title">Founder</h4>
+				<p>CalcHub is an online application that helps engineers create and share mathematical calculations. This has not been released yet.</p>
+			</section>
+
+			<section>
+				<h3><a href="">Maven</a></h3>
+				<img href="#" src="https://placeholder.baker.com/300x200">
+				<h4 class="job-title">Lead Engineer</h4>
+				<p>Maven is an online portal that allows business owners to manage their credit card transaction data.</p>
+			</section>
+
+			<section>
+				<h3><a href="#">Spot</a></h3>
+				<img href="#" src="https://placeholder.baker.com/300x200">
+				<h4 class="job-title">Lead Engineer</h4>
+				<p>Spot is a search and rescue drone that aims to significantly reduce the search time of buried avalanche victims. This has not been released yet.</p>
+			</section>
+		</div>
+
+		<div id="past-projects-list">
+			<section>
+				<h3><a href="#">PlayTable</a></h3>
+				<img href="#" src="images/playtable.jpg">
+				<h4 class="job-title">Front End Engineer</h4>
+				<p>PlayTable is the world's first digital board game console.</p>
+			</section>
+
+			<section>
+				<h3><a href="#">Bridge Mobile</a></h3>
+				<img href="#" src="https://placeholder.baker.com/300x200">
+				<h4 class="job-title">Full Stack Engineer + Product Owner</h4>
+				<p>Bridge Mobile is a mobile app that enables efficient communication on construction job sites.</p>
+			</section>
+
+			<section>
+				<h3><a href="#">MIMO</a></h3>
+				<img href="#" src="images/mimo.png">
+				<h4 class="job-title">Full Stack Engineer + Product Owner</h4>
+				<p>MIMO is a web application that helps entrepreneurs build financial models.</p>
+			</section>
+		</div>
+
+	</div>
+
 
 </body>
 </html>
