Updates to projects page

--- a/unit_9/projects.html
+++ b/unit_9/projects.html
@@ -14,13 +14,13 @@
 			<a class="hire-me" href="mailto:trevorhanus@gmail.com?subject=Build cool shit for me">Hire Me</a>
 		</nav>
 
-		<div id="container">
+<div id="container">
 
 			<header>
 				<h1 id="projects-header">Here's some <span class="end-header-words">cool shit.</span></h1>
 			</header>
 
-		<div id="current-projects-list" class="clearfix">
+		<div id="current-projects-list">
 			<section>
 				<h3><a href="#">CalcHub</a></h3>
 				<img href="#" src="https://placeholder.baker.com/300x200">
@@ -60,14 +60,13 @@
 
 			<section>
 				<h3><a href="#">MIMO</a></h3>
-				<img href="#" src="images/mimo.png">
+				<img href="#" src="https://placeholder.baker.com/300x200">
 				<h4 class="job-title">Full Stack Engineer + Product Owner</h4>
 				<p>MIMO is a web application that helps entrepreneurs build financial models.</p>
 			</section>
 		</div>
 
 	</div>
-
 
 </body>
 </html>
